--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -5,7 +5,8 @@
     android:background="@drawable/grid_item_background"
     android:padding="8dp"
     android:layout_marginBottom="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp">
 
     <TextView
         android:id="@+id/textView"
