--- a/app/src/main/res/layout/home_item_gifts_layout.xml
+++ b/app/src/main/res/layout/home_item_gifts_layout.xml
@@ -20,7 +20,7 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/changeMyName"
+        android:id="@+id/giftName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Texto"
