--- a/app/src/main/res/layout/home_item_gifts_layout.xml
+++ b/app/src/main/res/layout/home_item_gifts_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="101dp"
         android:layout_height="72dp"
         android:src="@drawable/ic_profile"
+        android:layout_marginLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
