--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grid_item_background_color">#FF4081</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#02AA04</color>
 </resources>
