--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="303dp"
         android:layout_weight="1"
+        android:background="@drawable/rectangle_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
